--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       "Dream big and dare to fail.",
       "Happiness is not by chance, but by choice.",
       "Think like a queen. A queen is not afraid to fail. Failure is another stepping stone to greatness",
-      "The greatest hazard in life is to risk nothing."
+      "The greatest hazard in life is to risk nothing.",
 "All our dreams can come true, if we have the courage to pursue them",
 "You may have to fight a battle more than once to win it",
 "You have to believe in yourself when no one else does" ,
